--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,7 @@ body {
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
+  overflow-x: hidden;
 }
 strong{
   color: var(--accent);
